res/tests/bad/_two_varargs_function_different_primitive_types.abc

// @TODO: add test

test1 :: (s: string, v: .. i32) {
  //test2(s, v);
}

test2 :: (s: string, v: .. i16) {
  test1(s, v);
}


